Fix regression on IE6 where !TabContainer contents overflow container, and height calculation are wrong.   There may be some cases where the !TabContainer bottom border doesn't show up, but better that than the overflow problem.   Refs #14164 !strict.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@27351 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1313,6 +1313,11 @@ Main class hierarchy:
     z-index: 0; /* so z-index settings below have no effect outside of the TabContainer */
     overflow-y: visible; /* prevent off-by-one-pixel errors from hiding bottom border (opposite tab labels) */
 }
+.dj_ie6 .dijitTabContainer {
+    /* workaround IE6 problem when tall content overflows TabContainer, see editor/test_FullScreen.html */
+   overflow: hidden;
+
+}
 .dijitTabContainerNoLayout {
 	width: 100%;	/* otherwise ScrollingTabController goes to 50K pixels wide */
 }
